# core

./: .gitmodules  CORE_MCP_SOLUTION.md  IMPORT_TO_MAKAU_DT.md  PROJECT_SUMMARY.md  microbit_webserial_guide.md
core-mcp-server/: CALDERA_DEPLOYMENT.md  COMPLETE_SOLUTION_SUMMARY.md  DEPLOYMENT.md  HOW_TO_USE.md  IMPLEMENTATION_STATUS.md  INTERACTIVE_WORKFLOW.md  INTERACTIVE_WORKFLOW_COMPLETE.md  IOT_QUICKSTART.md  MCP_WITH_LLM_GUIDE.md  NATURAL_LANGUAGE_GUIDE.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  STARTUP_MANUAL.md  VNC_PROXY_STATUS.md  WEB_UI_GUIDE.md  caldera_session_watcher.py  core_bridge_capture.sh  core_mqtt_injector.py  core_session_listener.py  digital_twin_builder.py  generate_tailscale_mesh.py  llm_generator.py  llm_generator_v2.py  llm_generator_v3.py  load_topology.py  makua_ontology.md  mqtt_bridge.py  phone_mqtt_injector.py  phone_web_ui.py  pyproject.toml  setup_hmi_vnc_proxies.sh  start_and_deploy.py  start_iot_system.sh  start_phone_system.sh  start_system.sh  start_webui.sh  test_topology_gen.py  verify_installation.sh  vnc_diagnostics.py  (+1 more)
core-mcp-server/core_mcp/: __init__.py  appliance_registry.py  server.py  topology_generator.py
core-mcp-server/docs/: APPLIANCE_ARCHITECTURE.md  MICROBIT_IOT_ARCHITECTURE.md  VNC_WORKSTATION_ARCHITECTURE.md  VYOS_CONFIGURATION.md
core-mcp-server/examples/: README.md  tailscale_mesh_example.xml
core-mcp-server/hooks/: 4:vnc_proxy_setup.sh
core-mcp-server/projects/: 10efc77b.json  a57ef0d2.json  edfed709.json
core-mcp-server/scripts/: deploy-caldera-agents.sh  deploy-sandcat.sh
(+567 files in other folders)
